2003-03-16  Richard Henderson  <rth@redhat.com>

        * simplify-rtx (simplify_binary_operation): Don't abort for
        SS_PLUS, US_PLUS, SS_MINUS, US_MINUS.

2003-03-16  Richard Henderson  <rth@redhat.com>

        * config/i386/i386.md (movstrictqi, movstrictqi_1): Check
        optimize_size as well.

2003-03-16  Stephane Carrez  <stcarrez@nerim.fr>

	* config/m68hc11/m68hc11.c (print_operand): Handle 'b' modifier
	for D register to specify the low part of it, aka B.
	(m68hc11_gen_movhi): Use REG_WAS_0 note and increment or decrement
	the register if we are loading 1 or -1 to it; avoid using temp
	register when moving X/Y to Y/X.
	(m68hc11_gen_movqi): Likewise.
	(m68hc11_check_z_replacement): Fix last insn setting for compare case.

2003-03-14  Mark Mitchell  <mark@codesourcery.com>

	PR optimization/9016
	* config/i386/i386.c (ix86_expand_move): Force more CONST_DOUBLEs
	into the constant pool.

2003-03-16  Falk Hueffner  <falk.hueffner@student.uni-tuebingen.de>

	PR target/9164
	* tree.c (get_narrower): For extensions with unchanged bit number,
	return the unsignedness of the outer mode.

2003-03-16  Roger Sayle  <roger@eyesopen.com>

	* c-typeck.c (build_component_ref):  Turn "for" into "do .. while"
	to avoid "may be used uninitialized" warning on ia64-hpux.
	* config/ia64/ia64-c.c: Include "tm_p.h" for function prototypes.

2003-03-16  Andreas Jaeger  <aj@suse.de>

	* configure.in: Improve check for memcheck.h.
	* configure: Regenerated.

2003-03-16  Neil Booth  <neil@daikokuya.co.uk>

	* doc/cppopts.texi: Remove documentation of -A-.

2003-03-15  Zack Weinberg  <zack@codesourcery.com>

	* doc/libgcc.texi: Remove @tie.

2003-03-15  Josef Zlomek  <zlomekj@suse.cz>

	* rtl.h (subrtx_p): Renamed to rtx_referenced_p.
	(rtx_pair): Added new element update_label_nuses, renamed to
	replace_label_data.
	* cfgcleanup.c (outgoing_edges_match, try_crossjump_to_edge): Use
	replace_label_data instead of rtx_pair.
	* loop.c (load_mems): Likewise.